# darein-game

./: .gitignore  README.md  pyproject.toml
darwin_game/: debug_player.py  player_debug.py  profiling.py  run_tournament.py
darwin_game/core/: game.py  graph_utils.py  import_players.py  tournament.py
darwin_game/models/: player.py
darwin_game/players/andrey/: practic.py  practic2.py
darwin_game/players/andrey_old/: old.py
darwin_game/players/chat_gpt/: equilibrium.py  equitybot.py  predictive.py  titfortat.py
darwin_game/players/chat_gpt_o3_mini/: dominus3.py
darwin_game/players/chat_gpt_old/: adaptive.py  adaptivequitybot.py  defenceoptimizer.py  dynamicstrategist.py  flexiblestrategist.py  masterstrategist.py  quantumstrategist.py  sophisticated.py  strategos.py
darwin_game/players/old_guard/: andrew.py  rocket.py
darwin_game/players/simple/: simple.py
darwin_game/players/tony/: clippy.py
tests/: test_game.py
