[tool.poetry]
name = "darwin-game"
version = "0.1.0"
description = ""
authors = ["Andrey Lepekhin <andrey@lepekhin.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
tqdm = "^4.66.2"
tabulate = "^0.9.0"
termcolor = "^2.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
mypy = "^1.8.0"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "silent"
exclude = ["players"]

[[tool.mypy.overrides]]
module = "darwin_game.core.*"
disallow_untyped_defs = true
ignore_missing_imports = true


[tool.ruff]
target-version = "py312"
line-length = 119
respect-gitignore = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "TCH"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests"
]